adding google seo

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta name="google-site-verification" content="qysjtCtfOdPtCUl9y8gsEIL7BqAZkoL__W30Ri5E4G0" />
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
-      manifest.json provides metadata used when your web app is installed on a
+    <meta<meta name="google-site-verification" content="Sew_a09hGuFpGmK8zR3IVGyW4h5w8rx_VVTijOYeaRQ" /> name="google-site-verification" content="Sew_a09hGuFpGmK8zR3IVGyW4h5w8rx_VVTijOYeaRQ" />   c="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+     manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <meta name="google-site-verification" content="Sew_a09hGuFpGmK8zR3IVGyW4h5w8rx_VVTijOYeaRQ" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
